Add pages, more styling

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,6 @@
   </head>
   <body>
     <main>
-      
       <section class="header">
         <h1>Shaun Schwartz</h1>
         <h3>Software Developer</h3>
@@ -24,6 +23,14 @@
         <a href="about.html" class="tab-nav-item px-5 pt-02">About</a>
         <a href="contact.html" class="tab-nav-item px-5 pt-02">Contact</a>
       </div>
+      <div class="contact-info fade-in-text">
+        <h3>
+          <a href="mailto:me@shaunschwartz.com">me@shaunschwartz.com</a>
+        </h3>
+        <h3>
+          <a href="tel:+17788407347">(778)-840-7347</a>
+        </h3>
+    </div>
 
     </main>
   </body>
