Remove js, make employment page index

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       </section>
 
       <div class="tab-nav-container">
-        <a href="employment.html" class="tab-nav-item px-5 pt-02">Employment</a>
+        <a href="index.html" class="tab-nav-item px-5 pt-02">Employment</a>
         <a href="skills.html" class="tab-nav-item px-5 pt-02">Skills</a>
         <a href="projects.html" class="tab-nav-item px-5 pt-02">Projects</a>
         <a href="about.html" class="tab-nav-item px-5 pt-02">About</a>
