Remove seperate css files, download font

--- a/projects.html
+++ b/projects.html
@@ -27,28 +27,38 @@
 
       <section class="projects" class="fade-in-text">
         <h3>Bootflat (Contributor)</h3>
-          <p><li>An open source Flat UI KIT based on Bootstrap 3.3.0 CSS framework.</li></p>
-          <a href="https://github.com/bootflat/bootflat.github.io">Source Code</a>
+        <ul>
+          <li>An open source Flat UI KIT based on Bootstrap 3.3.0 CSS framework.</li>
+        </ul>
+        <a href="https://github.com/bootflat/bootflat.github.io">Source Code</a>
 
         <h3>Free IP Geolocation API</h3>
-          <p><li>An API that returns geolocation (country, state, region) information for a given IP addresses.</li></p>
-          <p><li>Parses a multi-million line CSV file to import IP address blocks to PostgreSQL and Elasticsearch.</li></p>
-          <p><li>Tech stack: Ruby on Rails, Sidekiq, Elasticsearch</li></p>
+        <ul>
+          <li>An API that returns geolocation (country, state, region) information for a given IP addresses.</li>
+          <li>Parses a multi-million line CSV file to import IP address blocks to PostgreSQL and Elasticsearch.</li>
+          <li>Tech stack: Ruby on Rails, Sidekiq, Elasticsearch</li>
+        </ul>
           <a href="https://github.com/Shaun-Schwartz/free-ip-geolocation">Source Code</a>
         
         <h3>Consul (Contributor)</h3>
-          <p><li>Opensource Open Government and EParticipation Web Software</li></p>
+        <ul>
+          <li>Opensource Open Government and EParticipation Web Software</li>
+        </ul>
           <a href="https://github.com/consul/consul">Source Code</a>
 
       <h3>Reddit Daily Top Post Archive</h3>
-        <p><li>This application collects the top 25 posts from the most popular subreddit once a day and aggregates them.</li></p>
-        <p><li>Tech stack: Ruby on Rails, Sidekiq, Redis, PostgreSQL, CSS, HTML</li></p>
+      <ul>
+        <li>This application collects the top 25 posts from the most popular subreddit once a day and aggregates them.</li>
+        <li>Tech stack: Ruby on Rails, Sidekiq, Redis, PostgreSQL, CSS, HTML</li>
+      </ul>
         <a href="https://github.com/Shaun-Schwartz/reddit-daily-top-posts-archive">Source Code</a>
 
       <h3>Cowrie Honeypot Collector</h3>
-        <p><li>Web application to collect, parse and display data collected from Cowrie (medium interaction honeypot).</li></p>
-        <p><li>Collected and displayed data includes geolocation, session, and attempted credential data.</li></p>
-        <p><li>Tech stack: Ruby on Rails, JavaScript, JQuery, React, PostgreSQL, CSS, HTML</li></p>
+      <ul>
+        <li>Web application to collect, parse and display data collected from Cowrie (medium interaction honeypot).</li>
+        <li>Collected and displayed data includes geolocation, session, and attempted credential data.</li>
+        <li>Tech stack: Ruby on Rails, JavaScript, JQuery, React, PostgreSQL, CSS, HTML</li>
+      </ul>
         <a href="https://github.com/Shaun-Schwartz/rails-cowrie-log-parser">Source Code</a>
       </section>
     </main>
