--- a/contact.html
+++ b/contact.html
@@ -24,12 +24,12 @@
         <a href="contact.html" class="tab-nav-item px-5 pt-02">Contact</a>
       </div>
       <div class="contact-info fade-in-text">
-        <h3>
+        <p style="font-size: 24px;">
           <a href="mailto:me@shaunschwartz.com">me@shaunschwartz.com</a>
-        </h3>
-        <h3>
+        </p>
+        <p style="font-size: 24px;">
           <a href="tel:+17788407347">(778)-840-7347</a>
-        </h3>
+        </p>
     </div>
 
     </main>
