Fix spelling mistake

--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
             I received my CCNA in 2014 after which I joined AppNeta as a Technical Support Engineer.
             AppNeta allowed me to stretch my networking legs and work with many interesting problems. I also had brief opportunities to do some python scripting.</p>
           <p>At this point I was completely hooked on programming and left AppNeta to pursue my web development certification at CodeCore College.</p>
-          <p>Having completed my certification I was lucky enough to find employment at Xera One where I had numerous opportunities to work on different projects, solving problems with various programming languages. Unfortunately Xera One was one of the many startups that don't make it so my employment with them ended in 2019.</p>
-          <p>Luckily for me I found Latero Labs. Latero Labs is a consulting and software development company based out of Vancouver. I worked on both mobile and web based applications primarily using Ruby on Rails and React/ React Native. The only constant in life is change and to everone's dismay COVID hit. Shortly after the first shutdown I left Latero Labs.</p>
+          <p>Having completed my certification I was lucky enough to find employment at Xera One where I had numerous opportunities to work on different projects, solving problems with various programming languages. Unfortunately Xera One was one of the many startups that didn't make it so my employment with them ended in 2019.</p>
+          <p>Luckily for me I found Latero Labs. Latero Labs is a consulting and software development company based out of Vancouver. I worked on both mobile and web based applications primarily using Ruby on Rails and React/ React Native. The only constant in life is change and to everyone's dismay COVID hit. Shortly after the first shutdown I left Latero Labs.</p>
           <p>I've since moved to the Sunshine Coast, Sechelt BC specifically, where I've been able to work on my own projects and enjoy the quiet slowness of a small town.</p>
         </div>
       </section>
