Fix typo and expand technologies to include plain Ruby

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <li>Integrated with external APIs including RESTful and legacy SOAP APIs to sync customer data and create sales orders using Ruby on Rails</li>
           <li>Implemented a page scraper to scrape text and images to pre-populate product data using Ruby on Rails, Sidekiq, and Mechanize</li>
           <li>Developed systems to ingest thousands to millions of records from external APIs to aggregate ratings using Ruby on Rails with Sidekiq</li>
-          <li>Contributed to the development of frontend and mobile applications for small and large organizations using React, React Native, and TypeScript</li>
+          <li>Contributed to the development of web and mobile applications for small and large organizations using React, React Native, TypeScript and Ruby</li>
         </ul>
         <div class="employer">
           <h3 class="pr-1">Xera One</h3> Vancouver BC / Remote
