Use correct class for position, clarify location for Latero

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
       <section id="employment" class="fade-in-text"> <!-- employment section-->
         <div class="employer">
-          <h3 class="pr-1">Latero Labs</h3> Remote
+          <h3 class="pr-1">Latero Labs</h3> Vancouver BC / Remote
         </div>
-        <div class="employer">
+        <div class="position">
           <span class="pr-1">Software Developer</span> <small>Jan. 2020 to March 2021</small>
         </div>
         <ul>
@@ -40,7 +40,7 @@
         <div class="employer">
           <h3 class="pr-1">Xera One</h3> Vancouver BC / Remote
         </div>
-        <div class="employer">
+        <div class="position">
           <span class="pr-1">Web Developer</span> <small>June 2018 to Nov. 2019</small>
         </div>
         <ul>
@@ -54,7 +54,7 @@
         <div class="employer">
           <h3 class="pr-1">AppNeta</h3> Vancouver BC / Remote
         </div>
-        <div class="employer">
+        <div class="position">
           <span class="pr-1">Technical Support Engineer</span> <small>Nov. 2014 to Apr. 2017</small>
         </div>
         <ul>
