--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
 
       <section id="employment" class="fade-in-text"> <!-- employment section-->
         <div class="employer">
+          <h3 class="pr-1"></h3> Sechelt BC
+        </div>
+        <div class="position">
+          <span class="pr-1">Personal Projects/ Self-learning</span> <small>Apr. 2021 to Present</small>
+        </div>
+        <ul>
+          <li>Built Random Draw to generate random images for sale via NFT</li>
+          <li>Building a wellness tracker to track mood, sleep, activity and overall wellness</li>
+          <li>Read Metaprogramming Ruby 2 and The Pragmatic Programmer</li>
+          <li>Took an online course to familiarize myself with React 17</li>
+          <li>Taking an online course to better understand and work with React Native</li>
+        </ul>
+
+        <div class="employer">
           <h3 class="pr-1">Latero Labs</h3> Vancouver BC / Remote
         </div>
         <div class="position">
@@ -37,6 +51,7 @@
           <li>Developed systems to ingest thousands to millions of records from external APIs to aggregate ratings using Ruby on Rails with Sidekiq</li>
           <li>Contributed to the development of web and mobile applications for small and large organizations using React, React Native, TypeScript and Ruby</li>
         </ul>
+
         <div class="employer">
           <h3 class="pr-1">Xera One</h3> Vancouver BC / Remote
         </div>
@@ -51,6 +66,7 @@
           <li>Contributed to automated acceptance testing code base using Robot Framework with Python</li>
           <li>Investigated and debugged application defects</li>
         </ul>
+
         <div class="employer">
           <h3 class="pr-1">AppNeta</h3> Vancouver BC / Remote
         </div>
