--- a/404.html
+++ b/404.html
@@ -10,6 +10,9 @@
   </head>
   <body>
     <main>
+      <div class="first-circle"></div>
+      <div class="middle-circle"></div>
+      <div class="outer-circle"></div>
       
       <section class="header">
         <h1>Shaun Schwartz</h1>
