--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,10 @@
   </head>
   <body>
     <main>
+      <div class="first-circle"></div>
+      <div class="middle-circle"></div>
+      <div class="outer-circle"></div>
+      
       <section class="header">
         <h1>Shaun Schwartz</h1>
         <h3>Software Developer</h3>
