Update projects with random draw

--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,13 @@
       </div>
 
       <section class="projects" class="fade-in-text">
+        <h3>Random Draw</h3>
+        <ul>
+          <li>Uses and extends the ChunkyPNG gem to draw random images consisting of basic shapes and random colors.</li>
+          <li>Includes a gamification aspect of rarity to entice collectability designed for NFT sales.</li>
+        </ul>
+        <a href="https://github.com/Shaun-Schwartz/random_draw">Source Code</a>
+       
         <h3>Bootflat (Contributor)</h3>
         <ul>
           <li>An open source Flat UI KIT based on Bootstrap 3.3.0 CSS framework.</li>
